--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,6 +13,6 @@ jobs:
           ruby-version: 2.6.x
       - name: Setup RSpec
         run: |
-          [ -f Gemfile ] && bundle --deployment
+          gem install --no-document rspec:'~>3.9'
       - name: RSpec Report
         run: rspec --force-color --format documentation
